--- a/ecommerce/templates/ecommerce/checkout-page.html
+++ b/ecommerce/templates/ecommerce/checkout-page.html
@@ -65,10 +65,10 @@
               <!--Grid row-->
 
               <hr>
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="save_info" name="save_info">
-                <label class="custom-control-label" for="save_info">Save this information for next time</label>
-              </div>
+              <!-- <div class="custom-control custom-checkbox"> -->
+                <!-- <input type="checkbox" class="custom-control-input" id="save_info" name="save_info"> -->
+                <!-- <label class="custom-control-label" for="save_info">Save this information for next time</label> -->
+              <!-- </div> -->
 
               <hr>
                 {% for value, name in form.fields.payment_option.choices %}
