--- a/ecommerce/templates/ecommerce/home-page.html
+++ b/ecommerce/templates/ecommerce/home-page.html
@@ -1,5 +1,6 @@
 {% extends 'ecommerce/base.html' %}
 {% block content %}
+    {% load static %}
  <!--Carousel Wrapper-->
   <div id="carousel-example-1z" class="carousel slide carousel-fade pt-4" data-ride="carousel">
 
@@ -113,7 +114,7 @@
 
               <!--Card image-->
               <div class="view overlay">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top">
+                <img src="{{ item.image_url }}" class="card-img-top">
                 <a href="{{ item.get_absolute_url }}">
                   <div class="mask rgba-white-slight"></div>
                 </a>
