--- a/ecommerce/templates/ecommerce/product-page.html
+++ b/ecommerce/templates/ecommerce/product-page.html
@@ -10,7 +10,7 @@
         <!--Grid column-->
         <div class="col-md-6 mb-4">
 
-          <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/14.jpg" class="img-fluid" alt="">
+          <img src="{{ object.image_url }}" class="img-fluid" alt="">
 
         </div>
         <!--Grid column-->
