--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,6 +1,8 @@
 {% extends 'ecommerce/base.html'%}
 {% block content %}
+    <div class="container">
       <div class="col-md-8 mt-4">
         <h4>You have successfully logged out. <a href="{% url 'login' %}">Login back here</a></h4>
       </div>
+    </div>
 {% endblock %}
