--- a/ecommerce/templates/ecommerce/footer.html
+++ b/ecommerce/templates/ecommerce/footer.html
@@ -1,5 +1,6 @@
 <!--Footer-->
-  <footer class="page-footer text-center font-small mt-4 wow fadeIn">
+  <footer class="page-footer text-lg-center font-small mt-5 wow fadeIn" style="position: relative; width: 100%;
+ bottom: -143px;">
 
     <!--Call to action-->
     <div class="pt-4">
@@ -57,7 +58,7 @@
 
     <!--Copyright-->
     <div class="footer-copyright py-3">
-      © 2019 Copyright:
+      © 2020 Copyright:
       <a href="https://mdbootstrap.com/education/bootstrap/" target="_blank"> KayMart </a>
     </div>
     <!--/.Copyright-->
