--- a/ecommerce/templates/ecommerce/navbar.html
+++ b/ecommerce/templates/ecommerce/navbar.html
@@ -4,7 +4,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand waves-effect">
+      <a class="navbar-brand waves-effect" href="{% url 'home' %}">
         <strong class="blue-text">KayMart</strong>
       </a>
 
