--- a/ecommerce/templates/ecommerce/footer.html
+++ b/ecommerce/templates/ecommerce/footer.html
@@ -1,22 +1,21 @@
 <!--Footer-->
-  <footer class="page-footer text-lg-center font-small mt-5 wow fadeIn" style="position: relative; width: 100%;
- bottom: -143px;">
+
+
+  <footer class="page-footer text-lg-center font-small mt-5 wow fadeIn">
 
     <!--Call to action-->
-    <div class="pt-4">
-      <a class="btn btn-outline-white" href="{% url 'home' %}"
-        role="button">Start Shopping
-        <i class="fas fa-download ml-2"></i>
-      </a>
+{#    <div class="pt-4">#}
+{#      <a class="btn btn-outline-white" href="{% url 'home' %}"#}
+{#        role="button">Start Shopping#}
+{#        <i class="fas fa-download ml-2"></i>#}
+{#      </a>#}
 {#      <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button">#}
 {#          #}
 {#        <i class="fas fa-graduation-cap ml-2"></i>#}
 {#      </a>#}
-    </div>
-    <!--/.Call to action-->
-      <pre>
-          <p>Contact us at kaymart@gmail.com for any complaints or refund request</p>
-      </pre>
+{#    </div>#}
+    <!--/.Call to action--><pre></pre>
+          <p style="color: #0d0d0d">Contact us at kaymart@gmail.com for any complaints or refund request</p>
 
     <hr class="my-4">
 
