--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,7 @@
 {% block content %}
     {% load crispy_forms_tags %}
     <!-- Blog Entries Column -->
-      <div class="col-md-8 mt-4 offset-1">
+      <div class="col-md-8 mt-4">
         <div class="card mb-4">
             <h4 class="card-header">Login your Account</h4>
           <div class="card-body">
