--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,7 +2,7 @@
 {% block content %}
     {% load crispy_forms_tags %}
     <!-- Blog Entries Column -->
-      <div class="col-md-8 mt-4 offset-2">
+      <div class="col-md-8 mt-4">
         <div class="card mb-4">
             <h4 class="card-header">Create New Account</h4>
           <div class="card-body">
