--- a/ecommerce/templates/ecommerce/checkout-page.html
+++ b/ecommerce/templates/ecommerce/checkout-page.html
@@ -74,21 +74,21 @@
               </div>
               <!--Grid row-->
 
-              <hr>
+              <!-- <hr> -->
               <!-- <div class="custom-control custom-checkbox"> -->
                 <!-- <input type="checkbox" class="custom-control-input" id="save_info" name="save_info"> -->
                 <!-- <label class="custom-control-label" for="save_info">Save this information for next time</label> -->
               <!-- </div> -->
 
-              <hr>
-                {% for value, name in form.fields.payment_option.choices %}
-                <div class="custom-control custom-radio">
-                  <input id="{{ name }}" name="payment_option" type="radio" value="{{ value }}" class="custom-control-input" required>
-                  <label class="custom-control-label" for="{{ name }}">{{ name }}</label>
-                </div>
-                {% endfor %}
-              <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+              <!-- <hr> -->
+                <!-- {% for value, name in form.fields.payment_option.choices %} -->
+                <!-- <div class="custom-control custom-radio"> -->
+                  <!-- <input id="{{ name }}" name="payment_option" type="radio" value="{{ value }}" class="custom-control-input" required> -->
+                  <!-- <label class="custom-control-label" for="{{ name }}">{{ name }}</label> -->
+                <!-- </div> -->
+                <!-- {% endfor %} -->
+              <!-- <hr class="mb-4"> -->
+              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue Payment</button>
 
             </form>
           </div>
