--- a/ecommerce/templates/ecommerce/footer.html
+++ b/ecommerce/templates/ecommerce/footer.html
@@ -9,10 +9,10 @@
         role="button">Start Shopping
         <i class="fas fa-download ml-2"></i>
       </a>
-{#      <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button">#}
-{#          #}
+      <a class="btn btn-outline-white" href="{% url 'request-refund' %}" role="button">
+          Request Refund
 {#        <i class="fas fa-graduation-cap ml-2"></i>#}
-{#      </a>#}
+      </a>
     </div>
     <!--/.Call to action--><pre></pre>
           <p style="color: #0d0d0d">Contact us at kaymart@gmail.com for any complaints or refund request</p>
