--- a/ecommerce/templates/ecommerce/order-snippet.html
+++ b/ecommerce/templates/ecommerce/order-snippet.html
@@ -27,7 +27,7 @@
               <span class="text-success">-#{{ order.coupon.amount }}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between">
-              <span>Total (USD)</span>
+              <span>Total </span>
               <strong>#{{ order.get_total }}</strong>
             </li>
           {% endif %}
